Cleaned up the code a lot following Clean Code practices